Sun Jul  4 21:00:39 2010  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_system.rb (test_syntax2): moved from sample/test.rb
	  [ruby-dev:41721]

Sun Jul  4 17:13:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (swallow, prepare_getline_args, rb_io_getline_1): fix for
	  paragraph mode reading in non-ascii-compatible encoding.
	  [ruby-dev:41803]

Sat Jul  3 16:14:10 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (Init_bigdecimal): add two new constants
	  BigDecimal::INFINITY and BigDecimal::NAN.

	* ext/bigdecimal/lib/bigdecimal/math.rb (BigMath.exp): modify the
	  behaviors for infinity arguments as same as Math.exp.

Sat Jul  3 09:47:26 2010  Aaron Patterson  <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb(visit_Psych_Nodes_Scalar):
	  teaching Psych to deserialize DateTime objects. [Bug #1390]

	* ext/psych/lib/psych/visitors/yaml_tree.rb(visit_DateTime): added a
	  method for serializing DateTime objects.

	* ext/psych/lib/psych/scalar_scanner.rb(parse_time): add method for
	  parsing times objects from a string.
	
	* test/psych/test_date_time.rb: tests for dumping DateTime objects.

Sat Jul  3 09:13:55 2010  Aaron Patterson  <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb (visit_Time): use
	  Time#nsec to accurately serialize time objects. [ruby-core:29233]

Fri Jul  2 23:30:23 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (argf_inplace_mode_set): prohibits an assignment of a tainted
	  value.

	* file.c (ruby_find_basename, ruby_find_extname): split from
	  rb_file_s_basename() and rb_file_s_extname().

	* util.c (ruby_add_suffix): support arbitrary length of the suffix
	  to get rid of the potential buffer overflow.
	  reported by tarui.

Fri Jul  2 05:31:51 2010  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_num2long): accept LONG_MAX < x < LONG_MAX+1 and
	  LONG_MIN-1 < x < LONG_MIN as well because they are converted
	  into the valid range of long by truncation.