@@ -1,3 +1,7 @@
+Sun Jul  4 22:02:02 2010  Tanaka Akira  <akr@fsij.org>
+
+	* test/ruby/test_system.rb (test_syntax): unified with test_syntax2.
+
 Sun Jul  4 21:00:39 2010  Tanaka Akira  <akr@fsij.org>
 
 	* test/ruby/test_system.rb (test_syntax2): moved from sample/test.rb
